--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
     <![endif]-->
 
     <div id="header">
-        <h1>The Scriptures, Mapped</h1>
+        <div id="crumb"></div>
+        <div id="centerhead">
+            <div id="title">The Scriptures, Mapped</div>
+            <div id="subtitle">By Stephen W. Liddle</div>
+        </div>
     </div>
-    <div id="scriptures"></div>
-    <div id="map"></div>
+    <div id="content">
+        <div id="scriptures"></div>
+        <div id="map"></div>
+    </div>
     <script type="text/javascript">
         function ready(eventHandler) {
             "use strict";
