--- a/index.html
+++ b/index.html
@@ -35,6 +35,15 @@
         <div id="map"></div>
     </div>
     <script type="text/javascript">
+        let map;
+
+        function initMap() {
+            map = new google.maps.Map(document.getElementById('map'), {
+                center: {lat: 31.777444, lng: 35.234935},
+                zoom: 8
+            });
+        }
+
         function ready(eventHandler) {
             "use strict";
 
@@ -54,5 +63,7 @@
             });
         });
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr33BgbK5Yx6ULqDQiTfsn33f2zVGtUXc&callback=initMap"
+            async defer></script>
 </body>
 </html>
