--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
 
     <div id="header">
-        <div id="crumb"></div>
+        <div id="crumbs"></div>
         <div id="centerhead">
             <div id="title">The Scriptures, Mapped</div>
             <div id="subtitle">By Stephen W. Liddle</div>
