--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="manifest" href="site.webmanifest">
     <link rel="apple-touch-icon" href="icon.png">
+    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/styles.css?v=1.0">
@@ -56,8 +57,13 @@
             }
         }
 
+        function showLocation() {
+            Scriptures.showLocation(...arguments);
+        };
+
         ready(function () {
             Scriptures.init(function () {
+                MapLabelInit();
                 window.addEventListener("hashchange", Scriptures.onHashChanged);
                 Scriptures.onHashChanged();
             });
@@ -65,5 +71,6 @@
     </script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAr33BgbK5Yx6ULqDQiTfsn33f2zVGtUXc&callback=initMap"
             async defer></script>
+    <script src="js/maplabel.js" defer></script>
 </body>
 </html>
