first commit with animations for chapters and hearchy and inside chapters

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <title>The Scriptures Mapped</title>
     <meta name="author" content="Your Name Here">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
@@ -52,33 +54,8 @@
             });
         });
     </script>
-    <!--
 
-
-
-
-
-
-
-
-
-
-
-
-        There be dragons here.
-
-
-
-
-
-
-
-
-
-
-
-      -->
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY_HERE&callback=initMap"
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC1UOfJQ52f89qzEETiG7uVhh-LwR_6pzs&callback=initMap"
             async defer></script>
     <script src="js/maplabel.js" defer></script>
 </body>
